# scaffolds

./: Justfile
elixir/: scaffold.yaml
elixir/hooks/: post_scaffold
elixir/{{ .ProjectSnake }}/: .credo.exs  .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mix.exs
fish/: scaffold.yaml
fish/hooks/: post_scaffold
fish/{{ .ProjectSnake }}/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Justfile  LICENCE.md  README.md  SECURITY.md
gleam/: scaffold.yaml
gleam-action/: scaffold.yaml
gleam-action/hooks/: post_scaffold
gleam-action/{{ .ProjectSnake }}/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENCE.md  README.md  SECURITY.md  action.yml  gleam.toml
gleam-monorepo/: scaffold.yaml
gleam-monorepo/hooks/: post_scaffold
gleam-monorepo/{{ .ProjectSnake }}/: .gitignore  .mise.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENCE.md  README.md  SECURITY.md
gleam/{{ .ProjectSnake }}/: CONTRIBUTING.md  Justfile  LICENCE.md  README.md  SECURITY.md  gleam.toml
go/: scaffold.yaml
go/hooks/: post_scaffold
go/{{ .ProjectSnake }}/: .gitignore  .goreleaser.yml  .mise.toml  (+7 more)
partials/: licence_links.txt  licence_names.txt  licence_trailers.txt
ruby/: scaffold.yaml
rust/: scaffold.yaml
rust/{{ .ProjectSnake }}/: CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  build.rs  rustfmt.toml
rust/{{ .ProjectSnake }}/.github/: FUNDING.yml  dependabot.yml
rust/{{ .ProjectSnake }}/.github/workflows/: release.yml  reviewdog.yml  rust.yml
rust/{{ .ProjectSnake }}/src/: main.rs
(+44 files in other folders)
